--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@lprett/gsheetdb": "^1.1.0",
     "@tailwindcss/vite": "^4.0.13",
     "chart.js": "^4.4.8",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "chartjs-plugin-zoom": "^2.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
